# nescrow

./: README.md  TECHNICAL_DOCUMENTATION.md  package.json
frontend/: Prompts.md
frontend/src/: replit.md
frontend/src/client/src/: App.tsx  index.css
frontend/src/client/src/components/: error-boundary.tsx  escrow-type-card.tsx  navbar.tsx  stat-card.tsx  wallet-modal.tsx
frontend/src/client/src/components/ui/: animated-counter.tsx  loading-state.tsx  progress.tsx  toast-variants.tsx
frontend/src/client/src/pages/: create-escrow.tsx  dashboard.tsx  escrow-detail.tsx  history.tsx  landing.tsx
frontend/src/server/: routes.ts  storage.ts
frontend/src/shared/: schema.ts
nescrow_client/: example.ts  index.ts  nescrow.ts  package.json
nescrow_client/lib/: pda.ts  rpc.ts  types.ts
nescrow_program/: Cargo.toml  lib.rs
nescrow_program/src/: accept_escrow.rs  cancel_escrow.rs  complete_escrow.rs  create_escrow.rs  extend_escrow.rs  mod.rs
nescrow_program/tests/: accept_escrow.rs  cancel_escrow.rs  complete_escrow.rs  create_escrow.rs  extend_escrow.rs
nescrow_program/tests/common/: mod.rs
src/: App.js  index.css
src/components/: EscrowCard.js  Layout.js
src/contexts/: NescrowContext.js
src/pages/: CreateEscrow.js  EscrowDetails.js  Home.js  MyEscrows.js  OpenEscrows.js
